--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,189 @@
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+alembic==1.14.1
+altair==5.5.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.8.0
+asteroid-filterbanks==0.4.0
+asyncer==0.0.7
+attrs==25.1.0
+beautifulsoup4==4.13.3
+bidict==0.23.1
+blinker==1.9.0
+blis==1.2.0
+cachetools==5.5.1
+catalogue==2.0.10
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
+chevron==0.14.0
+click==8.1.8
+cloudpathlib==0.20.0
 colorama==0.4.6
-filelock==3.16.1
+colorlog==6.9.0
+confection==0.1.5
+contourpy==1.3.1
+cycler==0.12.1
+cymem==2.0.11
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+distro==1.9.0
+docopt==0.6.2
+einops==0.8.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+fastapi==0.115.8
+filelock==3.17.0
+filetype==1.2.0
+fonttools==4.55.7
+frozenlist==1.5.0
 fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.44
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+groq==0.15.0
+grpcio==1.70.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.28.0
+HyperPyYAML==1.2.2
 idna==3.10
+importlib_metadata==8.5.0
 Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+julius==0.2.7
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+Lazify==0.4.0
+lightning==2.5.0.post0
+lightning-utilities==0.11.9
+literalai==0.1.103
 llvmlite==0.44.0
+Mako==1.3.8
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.0
+mdurl==0.1.2
 more-itertools==10.6.0
 mpmath==1.3.0
+multidict==6.1.0
+murmurhash==1.0.12
+mypy-extensions==1.0.0
+mysql-connector-python==9.2.0
+narwhals==1.25.2
+nest-asyncio==1.6.0
 networkx==3.4.2
 numba==0.61.0
 numpy==2.1.3
+omegaconf==2.3.0
+openai==1.60.2
 openai-whisper==20240930
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-exporter-otlp-proto-http==1.29.0
+opentelemetry-instrumentation==0.50b0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+optuna==4.2.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+preshed==3.0.9
+primePy==1.3
+propcache==0.2.1
+protobuf==5.29.3
+pyannote.audio==3.3.2
+pyannote.core==5.0.0
+pyannote.database==5.1.3
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
+pyarrow==19.0.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.11.2
+python-multipart==0.0.18
+python-socketio==5.12.1
+pytorch-lightning==2.5.0.post0
+pytorch-metric-learning==2.8.1
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
+rpds-py==0.22.3
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+scikit-learn==1.6.1
+scipy==1.15.1
+semver==3.0.4
+sentencepiece==0.2.0
+shellingham==1.5.4
+simple-websocket==1.1.0
+six==1.17.0
+smart-open==7.1.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soundfile==0.13.1
+soupsieve==2.6
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+speechbrain==1.0.2
+SQLAlchemy==2.0.37
+srsly==2.5.1
+starlette==0.41.3
+streamlit==1.42.0
 sympy==1.13.1
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==9.0.0
+tensorboardX==2.6.2.2
+thinc==8.3.4
+threadpoolctl==3.5.0
 tiktoken==0.8.0
+toml==0.10.2
+tomli==2.2.1
 torch==2.5.1
+torch-audiomentations==0.12.0
+torch_pitch_shift==1.2.5
+torchaudio==2.5.1
+torchmetrics==1.6.1
+tornado==6.4.2
 tqdm==4.67.1
+typer==0.15.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
+uptrace==1.29.0
 urllib3==2.3.0
+uvicorn==0.34.0
+wasabi==1.1.3
+watchdog==6.0.0
+watchfiles==0.20.0
+weasel==0.4.1
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.18.3
+zipp==3.21.0
